[project]
name = "daily-cat-mailing-content"
version = "0.1.0"
description = ""
authors = [
    {name = "hyun",email = "ghkdgus29@naver.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "langchain-openai (>=1.1.7,<2.0.0)",
    "zenquotespy (>=1.0.0,<2.0.0)",
    "langchain (>=1.2.3,<2.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
