[project]
name = "meow-content"
version = "0.1.0"
description = ""
authors = [
    {name = "hyun",email = "ghkdgus29@naver.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "langchain-openai (>=1.1.7,<2.0.0)",
    "langchain (>=1.2.3,<2.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "google-genai (>=1.62.0,<2.0.0)",
    "pillow (>=11.0.0,<12.0.0)",
    "langchain-google-genai (>=4.2.2,<5.0.0)",
    "langchain-qdrant (>=1.1.0,<2.0.0)",
    "datasets (>=3.0.0)",
    "langsmith (>=0.7.33,<0.8.0)",
    "sqlmodel (>=0.0.22)",
    "aiomysql (>=0.2.0)",
    "greenlet (>=3.5.0,<4.0.0)",
    "streamlit (>=1.45.0,<2.0.0)",
    "requests (>=2.32.0,<3.0.0)",
    "sshtunnel (>=0.4.0,<0.5.0)",
    "apscheduler (>=3.11,<4)",
    "paramiko (==3.5.0)",
    "aioboto3 (>=15.5.0,<16.0.0)",
]


[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
extend-select = ["TID251"]

[tool.ruff.lint.flake8-tidy-imports]
banned-api = {"app.repository.mysql._models" = {msg = "MySQL 엔티티는 repository 레이어를 통해서만 접근해야 합니다"}}

[tool.ruff.lint.per-file-ignores]
"app/repository/mysql/repository.py" = ["TID251"]
"script/**" = ["TID251"]
"tests/**" = ["TID251"]

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.408"
ruff = "^0.15.14"
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"
pytest-mock = "^3.15.1"
pytest-cov = "^7.1.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov=script --cov-report=term-missing"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
